added more context in the file

--- a/styles.css
+++ b/styles.css
@@ -10,31 +10,35 @@ h1{
 
 #first_div {
     width: 50%;
-    margin: 0 auto;
+    margin: 5% auto;
     font-size: 14px;
     color: green;
     border: 1px solid gray;
     border-radius: 5px;
+    padding: 2%;
+}
+
+.writeups {
+    line-height: 2;
+    letter-spacing: 1px;
 }
 
 #second_div {
     width: 50%;
-    margin: 0 auto;
+    margin: 5% auto;
     font-size: 14px;
     color: red;
     border: 1px solid gray;
     border-radius: 5px;
-
-
+    padding: 2%;
 }
 
 #third_div {
     width: 50%;
-    margin: 0 auto;
+    margin: 5% auto;
     font-size: 14px;
     color: blue;
     border: 1px solid gray;
     border-radius: 5px;
-
-
+    padding: 2%;
 }
